# mcp-ectors

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  server_builder.rs
src/client/: client_registry.rs  client_session.rs  mod.rs
src/examples/: counter_router.rs  hello_world.rs  mod.rs
src/mcp/: initialize_actor.rs  list_prompts_actor.rs  list_resources_actor.rs  list_tools_actor.rs  mod.rs
src/messages/: client_messages.rs  mod.rs  router_messages.rs  transport_messages.rs
src/messages/mcp/: mcp_messages.rs  mod.rs  protocol.rs
src/messages/sse/: broadcast_sse_message.rs  deregister_sse_client.rs  mod.rs  notify_sse_client.rs  register_sse_client.rs
src/router/: mod.rs  router.rs  router_actor.rs  router_registry.rs  router_service_manager.rs  system_router.rs  topic_registry_actor.rs  wasix_mcp.rs  wasm_router.rs
src/secrets/: basic_secrets_imports.rs  mod.rs  secrets.rs
src/todo/: actor_router_registry.rs  wasi_router_registry.rs
src/transport/: mod.rs  sse_transport_actor.rs  stdio_transport_actor.rs  transport_actor.rs  transport_config.rs  transport_error.rs  wasi_transport_actor.rs
src/utils/: json_rpc.rs  log_config.rs  mod.rs  wasm_loader.rs
tests/: mock_router.rs  sse_transport_test.rs
tests/wasm/: Cargo.toml  build.rs
tests/wasm/src/: lib.rs  wasm_mock_router.rs
wasm/: mcp_weather_api.wasm  mcp_weather_api2.wasm
wit/: wasix-mcp.wit  world.wit
