[package]
name = "mcp-ectors"
version = "0.0.1"
description = "A high-performance enterprise-ready (soon at least) MCP actors-based server for managing multiple mcp routers, supporting tools, prompts and resources."
authors = ["Maarten Ectors <maarten@ectors.com>"]
license = "MIT"  # Choose an appropriate license or use SPDX identifiers
repository = "https://github.com/mcp-ectors/mcp-ectors"  # Link to the repository
documentation = "https://docs.rs/mcp-ectors" 
keywords = ["mcp", "ai", "agents", "llm", "agentic"]  # Keywords for discoverability
categories = ["WebAssembly"]  # Optional categories for discoverability
readme = "README.md"  # If you have a readme, include it
edition = "2021"

[lib]
name = "mcp_ectors"  # The name of your library (this will be used to reference your library crate)
path = "src/lib.rs"  # This points to the file that defines your library (default is "src/lib.rs")
crate-type = ["lib"]

[dependencies]
actix = "0.13.5"
actix-codec = "0.5.2"
actix-rt = "2.10.0"
actix-web = "4.9.0"
actix-web-lab = "0.23.0"
anyhow = "1.0.97"
async-trait = "0.1.88"
futures = "0.3.31"
rustls = "0.23.25"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = "1.44.1"
tokio-rustls = "0.26.2"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version="0.3.19", features = ["env-filter"] }
wasmtime = "30.0.2"
wasmtime-wasi = "30.0.2"
#mcp-core = { git = "https://github.com/block/goose.git", package="mcp-core"}
rand = "0.9.0"
chrono = {version="0.4.40", features = ["serde"]}
url = "2.5.4"
schemars = "0.8.22"
base64 = "0.22.1"
tower-service = "0.3.3"
mcp-spec = "0.1.0"

[dev-dependencies]
chrono = "0.4.40"
mcp-client = "0.1.0"
tempfile = "3.19.0"
